manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82255864
spec:
    ports:
    - port: 8080 
    selector:
        app: "82255864"
