manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "s82255864-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82255864.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: 82255864
            port:
              number: 8080
        pathType: Prefix
